--- a/.htaccess
+++ b/.htaccess
@@ -3,13 +3,15 @@
 # Директиви (рядки) між `BEGIN WordPress` і `END WordPress`
 # створені автоматично і підлягають змінам тільки через фільтри WordPress.
 # Зміни зроблені вручну між цими маркерами будуть перезаписані.
-<IfModule mod_rewrite.c>
+<IModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
 RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_ILENAME} !-
+RewriteCond %{REQUEST_ILENAME} !-d
 RewriteRule . /index.php [L]
-</IfModule>
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+</IModule>
 
 # END WordPress
