--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,10 @@
-
 # BEGIN WordPress
-# Директиви (рядки) між `BEGIN WordPress` і `END WordPress`
-# створені автоматично і підлягають змінам тільки через фільтри WordPress.
-# Зміни зроблені вручну між цими маркерами будуть перезаписані.
-<IModule mod_rewrite.c>
+
 RewriteEngine On
 RewriteBase /
 RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_ILENAME} !-
-RewriteCond %{REQUEST_ILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
-
-</IModule>
 
 # END WordPress
